# medium-stuff

./: README.md  dataclasses_part_1.ipynb  dataclasses_part_1.py  pyproject.toml
